<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Medgauzer</string>
    <string name="add">Add</string>
    <string name="are_you_sure_to_delete_client">Are you sure you want to delete the client?</string>
    <string name="call_button">Call</string>
    <string name="cancel">Cancel</string>
    <string name="choose_contact">Choose contact</string>
    <string name="client_import">Client import</string>
    <string name="clients">Clients</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_button">Confirm</string>
    <string name="contacting_person">Contacting person</string>
    <string name="creating_new_client">Creating new client</string>
    <string name="delete">Delete</string>
    <string name="editing_new_client">Editing</string>
    <string name="end_of_month">end of month</string>
    <string name="friday_short">Fr</string>
    <string name="hide">Hide</string>
    <string name="import_complete">Import complete</string>
    <string name="import_in_progress">Import in progress</string>
    <string name="keep_client">Keep</string>
    <string name="monday_short">Mo</string>
    <string name="name">Name</string>
    <string name="no_clients">No clients</string>
    <string name="official_name">Official name*</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="address">Address</string>
    <string name="periodicity">Notification periodicity*:</string>
    <string name="permission_prohibition">You haven\'t granted according permission</string>
    <string name="phone">Phone*</string>
    <string name="postpone_button">Postpone</string>
    <string name="postpone_choose_date">Choose date</string>
    <string name="postpone_day_after_tomorrow">Day after tomorrow</string>
    <string name="postpone_in_a_week">In a week</string>
    <string name="postpone_tomorrow">Tomorrow</string>
    <string name="read_storage_explanation">Permission is needed to read importing file.</string>
    <string name="required_field_warning">Field can\'t be empty!</string>
    <string name="required_fields">* - required_fields</string>
    <string name="saturday_short">Sa</string>
    <string name="setting">Settings</string>
    <string name="settings">Settings</string>
    <string name="start_notification_date">Start notification date*:</string>
    <string name="start_of_month">start of month</string>
    <string name="sunday_short">Su</string>
    <string name="thursday_short">Th</string>
    <string name="tuesday_short">Tu</string>
    <string name="wednesday_short">Wd</string>
    <string name="weekdays">weekdays</string>
    <string name="weekdays_periodicity_warning">Choose at least one notification day!</string>
    <string name="workdays">Workdays</string>
    <string name="working_time">Working time:</string>
    <string name="every">every</string>
    <string name="weeks">week(s)</string>
    <string name="about">About</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="version">Version</string>
    <string name="author">Author</string>
    <string name="storage_permission_isnt_granted">Storage permission isn\'t granted</string>
    <string name="app_settings">APP SETTINGS</string>
    <string name="open_permissions_and_grant_storage">Open Permissions and grant the Storage permission</string>
</resources>