<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="7.5dp"
    android:longClickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@drawable/vertical_list_separator"
        android:orientation="vertical"
        android:padding="10dp"
        android:showDividers="middle">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ImageButton
                android:id="@+id/call_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/call_button_shape_green"
                android:contentDescription="@string/call_button"
                android:padding="5dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_phone_white_48dp" />

            <TextView
                android:id="@+id/item_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@id/call_button"
                android:layout_toStartOf="@id/call_button"
                android:maxLines="2"
                android:text="Text placeholder for UI. Lorem Ipsum"
                android:textColor="@android:color/black"
                android:textSize="@dimen/large_text_size" />

            <TextView
                android:id="@id/working_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/item_text_view"
                android:text="@string/working_time"
                android:textSize="@dimen/regular_text_size" />

            <TextView
                android:id="@+id/working_time_interval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/working_time"
                android:layout_below="@+id/item_text_view"
                android:layout_toEndOf="@id/working_time"
                android:layout_toRightOf="@id/working_time"
                android:paddingLeft="5dp"
                android:text="8:00 - 17:00"
                android:textSize="@dimen/regular_text_size" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/postpone_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@android:color/transparent"
                android:text="@string/postpone_button"
                android:textColor="@color/colorAccent" />

            <Button
                android:id="@+id/confirm_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/postpone_button"
                android:background="@android:color/transparent"
                android:text="@string/confirm_button"
                android:textColor="@color/colorAccent" />


        </RelativeLayout>
    </LinearLayout>


</android.support.v7.widget.CardView>


